--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,5 +1,7 @@
 .home {
-  width: 100%;
-  height: 500px;
-  background-color: red;
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
 }
