--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -1,8 +1,17 @@
 .header {
   display: flex;
   width: 100%;
-  height: 40px;
+  height: 53px;
+  box-sizing: border-box;
+  padding-left: 15px;
+  padding-right: 15px;
 
   justify-content: flex-start;
   align-items: center;
+
+  color: white;
+  font-weight: 800;
+  font-size: 20px;
+
+  border-bottom: 1px solid rgb(56, 68, 77);
 }
