--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,7 +1,18 @@
 .home {
-  width: 50%;
+  width: 100%;
   height: 100%;
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.main {
+  max-width: 600px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  border: 1px solid rgb(56, 68, 77);
+  margin-right: 36px;
 }
